Solved problem. Column spacing issue with overflow

--- a/style.css
+++ b/style.css
@@ -201,21 +201,24 @@ button{
     background-color: rgb(243, 241, 241);
     display: grid;
     grid-template-columns: 70% 30%;
-    justify-content: center;
+    width: 100%;
+    height: 100%;
+
+    margin-left: 2rem;
+    padding-top: 2rem;
+}
+
+.cards-left{
+    background-color: rgb(189, 170, 170);
 }
 
 .cards{
     display: grid;
     grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
 }
 
 .icons > svg{
     width: 20px;
     height: 20px;
-}
-
-.cards{
-    background-color: white;
-    border-radius: 15px;
-    border-left: 3px #fbbf24;
 }
